--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="navbar-info">
       <div class="navbar-info__container container">
         <div class="logo">
-          <a class="logo__link" href="">
+          <a class="logo__link" href="logo">
             <img class="logo__image" src="images/logo.svg" alt="BEAUTY">
             <strong class="logo__title">BEAUTY</strong>
           </a>
