--- a/index.html
+++ b/index.html
@@ -37,22 +37,22 @@
       <div class="container">
         <ol class="navbar-primary__list">
           <li class="navbar-primary__item">
-            <a href="navbar-primary__link">Парикмахерская</a>
+            <a class="navbar-primary__link" href="Парикмахерская">Парикмахерская</a>
           </li>
           <li class="navbar-primary__item">
-            <a href="navbar-primary__link">Барбершоп</a>
+            <a class="navbar-primary__link" href="Барбершоп">Барбершоп</a>
           </li>
           <li class="navbar-primary__item">
-            <a href="navbar-primary__link">Маникюр</a>
+            <a class="navbar-primary__link" href="Маникюр">Маникюр</a>
           </li>
           <li class="navbar-primary__item">
-            <a href="navbar-primary__link">Педикюр</a>
+            <a class="navbar-primary__link" href="Педикюр">Педикюр</a>
           </li>
           <li class="navbar-primary__item">
-            <a href="navbar-primary__link">Массаж</a>
+            <a class="navbar-primary__link" href="Массаж">Массаж</a>
           </li>
           <li class="navbar-primary__item">
-            <a href="navbar-primary__link">Мебель</a>
+            <a class="navbar-primary__link" href="Мебель">Мебель</a>
           </li>
         </ol>
       </div>
@@ -62,19 +62,19 @@
       <div class="container">
         <ol class="navbar-secondary__list">
           <li class="navbar-secondary__item">
-            <a class="navbar-secondary__link" href="">Доставка</a>
+            <a class="navbar-secondary__link" href="Доставка">Доставка</a>
           </li>
           <li class="navbar-secondary__item">
-            <a class="navbar-secondary__link" href="">Оплата</a>
+            <a class="navbar-secondary__link" href="Оплата">Оплата</a>
           </li>
           <li class="navbar-secondary__item">
-            <a class="navbar-secondary__link" href="">Отзывы</a>
+            <a class="navbar-secondary__link" href="Отзывы">Отзывы</a>
           </li>
           <li class="navbar-secondary__item">
-            <a class="navbar-secondary__link" href="">Вопрос - ответ</a>
+            <a class="navbar-secondary__link" href="Вопрос - ответ">Вопрос - ответ</a>
           </li>
           <li class="navbar-secondary__item">
-            <a class="navbar-secondary__link" href="">Контакты</a>
+            <a class="navbar-secondary__link" href="Контакты">Контакты</a>
           </li>
         </ol>
       </div>
@@ -89,7 +89,7 @@
           <h1 class="hero__title">Супер кресло</h1>
           <div class="hero__description">Текст акции всегда отражает суть, а не просто
             болтовню, поэтому внимательнее</div>
-          <a class="hero__button btn btn--secondary" href="">Подробнее</a>
+          <a class="hero__button btn btn--secondary" href="Подробнее">Подробнее</a>
         </div>
       </div>
     </section>
@@ -104,7 +104,7 @@
               <img class="offer-item__image" src="images/Rectangle.png" alt="chair">
             </div>
             <div class="offer-item__price">9 900 UAH</div>
-            <a class="offer-item__button btn btn--secondary btn--sm" href="">Купить</a>
+            <a class="offer-item__button btn btn--secondary btn--sm" href="Купить">Купить</a>
           </article>
 
           <article class="offer-item">
@@ -113,7 +113,7 @@
               <img class="offer-item__image" src="images/Rectangle.png" alt="chair">
             </div>
             <div class="offer-item__price">9 900 UAH</div>
-            <a class="offer-item__button btn btn--secondary btn--sm" href="">Купить</a>
+            <a class="offer-item__button btn btn--secondary btn--sm" href="Купить">Купить</a>
           </article>
 
           <article class="offer-item">
@@ -122,7 +122,7 @@
               <img class="offer-item__image" src="images/Rectangle.png" alt="chair">
             </div>
             <div class="offer-item__price">9 900 UAH</div>
-            <a class="offer-item__button btn btn--secondary btn--sm" href="">Купить</a>
+            <a class="offer-item__button btn btn--secondary btn--sm" href="Купить">Купить</a>
           </article>
 
           <article class="offer-item">
@@ -131,7 +131,7 @@
               <img class="offer-item__image" src="images/Rectangle.png" alt="chair">
             </div>
             <div class="offer-item__price">9 900 UAH</div>
-            <a class="offer-item__button btn btn--secondary btn--sm" href="">Купить</a>
+            <a class="offer-item__button btn btn--secondary btn--sm" href="Купить">Купить</a>
           </article>
         </div>
       </div>
@@ -159,7 +159,7 @@
               <div class="our-shops__description">Более 300 магазинов
                 по всей Украине</div>
               <div class="our-shops__actions">
-                <a class="our-shops__buttons btn" href="">Карта магазинов</a>
+                <a class="our-shops__buttons btn" href="Карта магазинов">Карта магазинов</a>
               </div>
             </div>
           </div>
@@ -172,63 +172,63 @@
       <div class="container">
         <ul class="brands__list">
           <li class="brands__item">
-            <a class="brands__link" href="">
-              <img class="brands__image" src="images/image.png" alt="">
+            <a class="brands__link" href="brands">
+              <img class="brands__image" src="images/image.png" alt="impuls">
             </a>
           </li>
           <li class="brands__item">
-            <a class="brands__link" href="">
-              <img class="brands__image" src="images/image.png" alt="">
+            <a class="brands__link" href="brands">
+              <img class="brands__image" src="images/image.png" alt="impuls">
             </a>
           </li>
           <li class="brands__item">
-            <a class="brands__link" href="">
-              <img class="brands__image" src="images/image.png" alt="">
+            <a class="brands__link" href="brands">
+              <img class="brands__image" src="images/image.png" alt="impuls">
             </a>
           </li>
           <li class="brands__item">
-            <a class="brands__link" href="">
-              <img class="brands__image" src="images/image.png" alt="">
+            <a class="brands__link" href="brands">
+              <img class="brands__image" src="images/image.png" alt="impuls">
             </a>
           </li>
           <li class="brands__item">
-            <a class="brands__link" href="">
-              <img class="brands__image" src="images/image.png" alt="">
+            <a class="brands__link" href="brands">
+              <img class="brands__image" src="images/image.png" alt="impuls">
             </a>
           </li>
           <li class="brands__item">
-            <a class="brands__link" href="">
-              <img class="brands__image" src="images/image.png" alt="">
+            <a class="brands__link" href="brands">
+              <img class="brands__image" src="images/image.png" alt="impuls">
             </a>
           </li>
           <li class="brands__item">
-            <a class="brands__link" href="">
-              <img class="brands__image" src="images/image.png" alt="">
+            <a class="brands__link" href="brands">
+              <img class="brands__image" src="images/image.png" alt="impuls">
             </a>
           </li>
           <li class="brands__item">
-            <a class="brands__link" href="">
-              <img class="brands__image" src="images/image.png" alt="">
+            <a class="brands__link" href="brands">
+              <img class="brands__image" src="images/image.png" alt="impuls">
             </a>
           </li>
           <li class="brands__item">
-            <a class="brands__link" href="">
-              <img class="brands__image" src="images/image.png" alt="">
+            <a class="brands__link" href="brands">
+              <img class="brands__image" src="images/image.png" alt="impuls">
             </a>
           </li>
           <li class="brands__item">
-            <a class="brands__link" href="">
-              <img class="brands__image" src="images/image.png" alt="">
+            <a class="brands__link" href="brands">
+              <img class="brands__image" src="images/image.png" alt="impuls">
             </a>
           </li>
           <li class="brands__item">
-            <a class="brands__link" href="">
-              <img class="brands__image" src="images/image.png" alt="">
+            <a class="brands__link" href="brands">
+              <img class="brands__image" src="images/image.png" alt="impuls">
             </a>
           </li>
           <li class="brands__item">
-            <a class="brands__link" href="">
-              <img class="brands__image" src="images/image.png" alt="">
+            <a class="brands__link" href="brands">
+              <img class="brands__image" src="images/image.png" alt="impuls">
             </a>
           </li>
         </ul>
@@ -245,7 +245,7 @@
               <img class="offer-item__image" src="images/Rectangle.png" alt="chair">
             </div>
             <div class="offer-item__price">9 900 UAH</div>
-            <a class="offer-item__button btn btn--secondary btn--sm" href="">Купить</a>
+            <a class="offer-item__button btn btn--secondary btn--sm" href="Купить">Купить</a>
           </article>
 
           <article class="offer-item">
@@ -254,7 +254,7 @@
               <img class="offer-item__image" src="images/Rectangle.png" alt="chair">
             </div>
             <div class="offer-item__price">9 900 UAH</div>
-            <a class="offer-item__button btn btn--secondary btn--sm" href="">Купить</a>
+            <a class="offer-item__button btn btn--secondary btn--sm" href="Купить">Купить</a>
           </article>
 
           <article class="offer-item">
@@ -263,7 +263,7 @@
               <img class="offer-item__image" src="images/Rectangle.png" alt="chair">
             </div>
             <div class="offer-item__price">9 900 UAH</div>
-            <a class="offer-item__button btn btn--secondary btn--sm" href="">Купить</a>
+            <a class="offer-item__button btn btn--secondary btn--sm" href="Купить">Купить</a>
           </article>
 
           <article class="offer-item">
@@ -272,7 +272,7 @@
               <img class="offer-item__image" src="images/Rectangle.png" alt="chair">
             </div>
             <div class="offer-item__price">9 900 UAH</div>
-            <a class="offer-item__button btn btn--secondary btn--sm" href="">Купить</a>
+            <a class="offer-item__button btn btn--secondary btn--sm" href="Купить">Купить</a>
           </article>
         </div>
       </div>
@@ -294,49 +294,22 @@
             </div>
             <ul class="category__list">
               <li class="category__item">
-                <a class="category__link" href="">Насадки</a>
+                <a class="category__link" href="Насадки">Насадки</a>
               </li>
               <li class="category__item">
-                <a class="category__link" href="">Инструменты</a>
+                <a class="category__link" href="Инструменты">Инструменты</a>
               </li>
               <li class="category__item">
-                <a class="category__link" href="">Гель-лаки</a>
+                <a class="category__link" href="Гель-лаки">Гель-лаки</a>
               </li>
               <li class="category__item">
-                <a class="category__link" href="">Дизайн</a>
+                <a class="category__link" href="Дизайн">Дизайн</a>
               </li>
               <li class="category__item">
-                <a class="category__link" href="">Наращивание</a>
+                <a class="category__link" href="Наращивание">Наращивание</a>
               </li>
               <li class="category__item">
-                <a class="category__link" href="">Оборудование</a>
-              </li>
-            </ul>
-          </div>
-          <div class="category__servic">
-
-            <div class="category__title">
-              <h2 class="title">Популярные
-                категории</h2>
-            </div>
-            <ul class="category__list">
-              <li class="category__item">
-                <a class="category__link" href="">Насадки</a>
-              </li>
-              <li class="category__item">
-                <a class="category__link" href="">Инструменты</a>
-              </li>
-              <li class="category__item">
-                <a class="category__link" href="">Гель-лаки</a>
-              </li>
-              <li class="category__item">
-                <a class="category__link" href="">Дизайн</a>
-              </li>
-              <li class="category__item">
-                <a class="category__link" href="">Наращивание</a>
-              </li>
-              <li class="category__item">
-                <a class="category__link" href="">Оборудование</a>
+                <a class="category__link" href="Оборудование">Оборудование</a>
               </li>
             </ul>
           </div>
@@ -348,22 +321,22 @@
             </div>
             <ul class="category__list">
               <li class="category__item">
-                <a class="category__link" href="">Насадки</a>
+                <a class="category__link" href="Насадки">Насадки</a>
               </li>
               <li class="category__item">
-                <a class="category__link" href="">Инструменты</a>
+                <a class="category__link" href="Инструменты">Инструменты</a>
               </li>
               <li class="category__item">
-                <a class="category__link" href="">Гель-лаки</a>
+                <a class="category__link" href="Гель-лаки">Гель-лаки</a>
               </li>
               <li class="category__item">
-                <a class="category__link" href="">Дизайн</a>
+                <a class="category__link" href="Дизайн">Дизайн</a>
               </li>
               <li class="category__item">
-                <a class="category__link" href="">Наращивание</a>
+                <a class="category__link" href="Наращивание">Наращивание</a>
               </li>
               <li class="category__item">
-                <a class="category__link" href="">Оборудование</a>
+                <a class="category__link" href="Оборудование">Оборудование</a>
               </li>
             </ul>
           </div>
@@ -375,22 +348,49 @@
             </div>
             <ul class="category__list">
               <li class="category__item">
-                <a class="category__link" href="">Насадки</a>
+                <a class="category__link" href="Насадки">Насадки</a>
               </li>
               <li class="category__item">
-                <a class="category__link" href="">Инструменты</a>
+                <a class="category__link" href="Инструменты">Инструменты</a>
               </li>
               <li class="category__item">
-                <a class="category__link" href="">Гель-лаки</a>
+                <a class="category__link" href="Гель-лаки">Гель-лаки</a>
               </li>
               <li class="category__item">
-                <a class="category__link" href="">Дизайн</a>
+                <a class="category__link" href="Дизайн">Дизайн</a>
               </li>
               <li class="category__item">
-                <a class="category__link" href="">Наращивание</a>
+                <a class="category__link" href="Наращивание">Наращивание</a>
               </li>
               <li class="category__item">
-                <a class="category__link" href="">Оборудование</a>
+                <a class="category__link" href="Оборудование">Оборудование</a>
+              </li>
+            </ul>
+          </div>
+          <div class="category__servic">
+
+            <div class="category__title">
+              <h2 class="title">Популярные
+                категории</h2>
+            </div>
+            <ul class="category__list">
+              <li class="category__item">
+                <a class="category__link" href="Насадки">Насадки</a>
+              </li>
+              <li class="category__item">
+                <a class="category__link" href="Инструменты">Инструменты</a>
+              </li>
+              <li class="category__item">
+                <a class="category__link" href="Гель-лаки">Гель-лаки</a>
+              </li>
+              <li class="category__item">
+                <a class="category__link" href="Дизайн">Дизайн</a>
+              </li>
+              <li class="category__item">
+                <a class="category__link" href="Наращивание">Наращивание</a>
+              </li>
+              <li class="category__item">
+                <a class="category__link" href="Оборудование">Оборудование</a>
               </li>
             </ul>
           </div>
@@ -403,24 +403,24 @@
         <div class="contact__info">
 
           <div class="messengers">
-            <a class="messengers__link" href="">
+            <a class="messengers__link" href="link">
               <span class="messengers__icons">
-                <img class="icon" src="images/youtube.svg" alt="">
+                <img class="icon" src="images/youtube.svg" alt="youtube">
               </span>
             </a>
-            <a class="messengers__link" href="">
+            <a class="messengers__link" href="link">
               <span class="messengers__icons">
-                <img class="icon" src="images/vk.svg" alt="">
+                <img class="icon" src="images/vk.svg" alt="vk">
               </span>
             </a>
-            <a class="messengers__link" href="">
+            <a class="messengers__link" href="link">
               <span class="messengers__icons">
-                <img class="icon-face" src="images/face.svg" alt="">
+                <img class="icon-face" src="images/face.svg" alt="facebook">
               </span>
             </a>
-            <a class="messengers__link" href="">
+            <a class="messengers__link" href="link">
               <span class="messengers__icons">
-                <img class="icon" src="images/instagram.svg" alt="">
+                <img class="icon" src="images/instagram.svg" alt="instagram">
               </span>
             </a>
           </div>
@@ -439,12 +439,12 @@
         <div class="policy__content">
 
           <div class="infoshop">
-            <a class="infoshop__link" href="">Лучший магазин (с) 2019 Все права защищены. Интернет-магазин оборудования
+            <a class="infoshop__link" href="link">Лучший магазин (с) 2019 Все права защищены. Интернет-магазин оборудования
               для салонов красоты</a>
           </div>
 
           <div class="privacy-policy">
-            <a class="privacy-policy__link" href="">Политика конфиденциальности</a>
+            <a class="privacy-policy__link" href="link">Политика конфиденциальности</a>
           </div>
         </div>
       </div>
